# edgetpu-minimal-example

./: .gitignore  CMakeLists.txt  README.md
include/: edgetpu.h  model_utils.h
scripts/: install_cmake.sh  make2gbswap.sh
src/: minimal.cc  model_utils.cc
